--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <h2 class="heading">Experiência Profissional</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Backend Developer / DevOps - <span class="place"><a href="http://yourapp.rocks/">YourApp.Rocks</a></span>
+                                <h3 class="title">Backend Developer / DevOps - <span class="place"><a href="https://yourapp.rocks/">YourApp.Rocks</a></span>
                                     <span class="year">(2018 - hoje)</span></h3>
                                 <p>Como freelancer, trabalha no desenvolvimento de APIs Restfull e aplicações web. Além
                                     de ser o responsável pela configuração de servidores, testes automatizados, deploy
@@ -123,6 +123,18 @@
                                         <i class="fas fa-external-link-alt"></i> Mais detalhes no Linkedin
                                 </a>
                             </p>
+
+                        </div>
+                        <!--//content-->
+                    </div>
+                    <!--//section-inner-->
+                </section>
+                <!--//section-->
+
+                <section class="blog aside section">
+                    <div class="section-inner">
+                        <h2 class="heading">Artigos Recentes</h2>
+                        <div id="rss-feeds" class="content">
 
                         </div>
                         <!--//content-->
@@ -286,18 +298,6 @@
                             </div>
                         </div>
                     </div>
-                </aside>
-                <!--//section-->
-
-                <aside class="blog aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Artigos Recentes</h2>
-                        <div id="rss-feeds" class="content">
-
-                        </div>
-                        <!--//content-->
-                    </div>
-                    <!--//section-inner-->
                 </aside>
                 <!--//section-->
 
