--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <div class="item">
                                 <h3 class="title">Backend Developer / DevOps - <span class="place"><a href="https://yourapp.rocks/">YourApp.Rocks</a></span>
                                     <span class="year">(2018 - hoje)</span></h3>
-                                <p>Como freelancer, trabalha no desenvolvimento de APIs Restfull e aplicações web. Além
+                                <p>Como freelancer, trabalha no desenvolvimento de APIs RESTful e aplicações web. Além
                                     de ser o responsável pela configuração de servidores, testes automatizados, deploy
                                     e entrega contínua.</p>
                             </div>
